# magic-pocket

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
