[package]
name = "magic-pocket"
version = "0.1.0"
description = "Magic Pocket desktop clipboard manager"
authors = ["Codex"]
edition = "2021"

[lib]
name = "magic_pocket_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
arboard = "3.6.1"
chrono = { version = "0.4.39", features = ["serde"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-global-shortcut = "2.3.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
window-vibrancy = "0.6.0"
